--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,9 @@
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>USER</title>
+  <title>User</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
